--- a/UnturnedAssetSpec/Properties/DiagnosticResources.resx
+++ b/UnturnedAssetSpec/Properties/DiagnosticResources.resx
@@ -183,4 +183,10 @@
   <data name="UNT1013" xml:space="preserve">
     <value>Achievement ID "{0}" either doesn't exist or isn't a valid NPC achievement.</value>
   </data>
+  <data name="UNT1014" xml:space="preserve">
+    <value>Enum value "{0}" isn't recognized. See documentation for a list of valid values.</value>
+  </data>
+  <data name="UNT1015" xml:space="preserve">
+    <value>Expected a type deriving from '{0}'.</value>
+  </data>
 </root>
