--- a/UnturnedAssetSpec/Properties/DiagnosticResources.resx
+++ b/UnturnedAssetSpec/Properties/DiagnosticResources.resx
@@ -192,4 +192,7 @@
   <data name="UNT1015" xml:space="preserve">
     <value>Expected a type deriving from '{0}'.</value>
   </data>
+  <data name="UNT1016" xml:space="preserve">
+    <value>Level {0} is not a valid level for the {1} skill.</value>
+  </data>
 </root>
