--- a/LspServer/Properties/Resources.resx
+++ b/LspServer/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Hover_AddedVersion" xml:space="preserve">
+    <value>Added in</value>
+  </data>
   <data name="Hover_DictionaryTitle" xml:space="preserve">
     <value>Dictionary</value>
   </data>
