--- a/LspServer/Properties/Resources.resx
+++ b/LspServer/Properties/Resources.resx
@@ -117,6 +117,24 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Error_FailedToFindVscode" xml:space="preserve">
+    <value>Unable to find installed location of Visual Studio Code.</value>
+  </data>
+  <data name="Error_FileAssocFailedToClear" xml:space="preserve">
+    <value>Failed to clear file association for "{0}" files.</value>
+  </data>
+  <data name="Error_FileAssocFailedToCreate" xml:space="preserve">
+    <value>Failed to create VSCode file association for ProgId "{0}".</value>
+  </data>
+  <data name="Error_RegSvr32Exception" xml:space="preserve">
+    <value>Failed to run "{0}". Exit code: "{1}".</value>
+  </data>
+  <data name="Error_RegSvr32NotFound" xml:space="preserve">
+    <value>Failed to find regsvr32.exe at "{0}", which is needed to register file associations. Falling back to regsvr32 in PATH.</value>
+  </data>
+  <data name="Error_RegSvr32Timeout" xml:space="preserve">
+    <value>Timed out running "{0}" to set up file associations.</value>
+  </data>
   <data name="Hover_AddedVersion" xml:space="preserve">
     <value>Added in</value>
   </data>
