--- a/UnturnedAssetSpec/Diagnostics/DiagnosticResources.resx
+++ b/UnturnedAssetSpec/Diagnostics/DiagnosticResources.resx
@@ -357,4 +357,25 @@
   <data name="UNT2004_StrictColor" xml:space="preserve">
     <value>Value '{0}' can not be converted to a value of type '{1}'. Property '{2}' is parsed in a more strict format and should be exactly {3} characters. For example: "{4}".</value>
   </data>
+  <data name="UPROJ2001" xml:space="preserve">
+    <value>Property '{0}' doesn't exist. Double-check the spelling of the property name. Template properties should be referred to using '#' in place of the numbers.</value>
+  </data>
+  <data name="UPROJ1001" xml:space="preserve">
+    <value>Property '{0}' should use the following casing: "{1}".</value>
+  </data>
+  <data name="UPROJ2002" xml:space="preserve">
+    <value>Type '{0}' doesn't exist. Double-check the spelling of the type name and that it is a fully-qualified type name.</value>
+  </data>
+  <data name="UPROJ1002" xml:space="preserve">
+    <value>Type '{0}' should use the following casing: "{1}".</value>
+  </data>
+  <data name="UNT2004_BackwardsCompatibleAssetReferenceStringOnly" xml:space="preserve">
+    <value>Dictionary can not be converted to a value of type '{0}', which expects a GUID, ID, or TYPE:ID as a string only. Property '{1}' expects a value.</value>
+  </data>
+  <data name="UNT2004_LegacyAssetReferenceStringOnly" xml:space="preserve">
+    <value>Dictionary can not be converted to a value of type '{0}', which expects an ID as a string only. Property '{1}' expects a value.</value>
+  </data>
+  <data name="UNT2004_TypeReferenceStringOnly" xml:space="preserve">
+    <value>Dictionary can not be converted to a value of type '{0}', which expects a type name as a string only. Property '{1}' expects a value.</value>
+  </data>
 </root>
