--- a/UnturnedAssetSpec/Properties/Resources.resx
+++ b/UnturnedAssetSpec/Properties/Resources.resx
@@ -543,4 +543,7 @@
   <data name="Type_Name_NullType" xml:space="preserve">
     <value>Any Type</value>
   </data>
+  <data name="JsonException_UnexpectedProperty" xml:space="preserve">
+    <value>Property "{0}" can not be defined with "{1}".</value>
+  </data>
 </root>
